--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ install:
 #- bikeshed update
 # Instead of bikeshed update, we use a cached copy of the files to give consistent builds
 - cp .spec-data/* ./bikeshed/bikeshed/spec-data
-script: 'bikeshed spec && ./.multipage-split.sh'
+script: 'bikeshed spec'
 after_success:
 - '[ "${TRAVIS_PULL_REQUEST}" = "false" ] && ./.deploy-output.sh'
 env:
