--- a/.travis.yml
+++ b/.travis.yml
@@ -7,15 +7,20 @@ branches:
   - master
 before_install:
 - chmod 755 ./.deploy-output.sh
-- nvm install stable
+- nvm install 5.11.1
 install:
 - pip install pygments cssselect html5lib lxml
 - git clone --depth=100 --branch=master https://github.com/tabatkins/bikeshed.git ./bikeshed
-- pushd ./bikeshed
-- popd
+# Use stable copy of bikeshed
+#- pushd ./bikeshed
+#- git checkout 08075e7d3a9fd232f3ab09b4fe8f7b22abfe1345
+#- popd
 - pip install --editable ./bikeshed
-- pwd
-script: 'bikeshed spec'
+- bikeshed update
+# Use cached copy of bikeshed data files to give consistent builds
+#- cp -R .spec-data/* ./bikeshed/bikeshed/spec-data
+script:
+- python build.py
 after_success:
 - '[ "${TRAVIS_PULL_REQUEST}" = "false" ] && ./.deploy-output.sh'
 env:
